# telfin-agent

./: .dockerignore  .gitignore  AUTO_START_GUIDE.md  BUILD_REFERENCE.md  CHANGES.md  CROSS_COMPILATION.md  Cargo.toml  Dockerfile.build  IMPLEMENTATION.md  Makefile  README.md  SECURITY_FIXES.md  SECURITY_IMPROVEMENTS.md  SETUP_COMPLETE.md  TLS_PINNING.md  build.sh  install.ps1  install.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: agent.rs  auth.rs  config.rs  error.rs  fingerprint.rs  health.rs  main.rs  network.rs  protocol.rs  service.rs  tls.rs  update.rs
src/keychain/: linux.rs  macos.rs  mod.rs  windows.rs
