[package]
name = "telfin-agent"
version = "0.1.8"
edition = "2021"
description = "Telfin SSH Tunnel Agent"
license = "MIT"
authors = ["Telfin Team"]

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full", "signal"] }

# WebSocket client
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# PTY handling
portable-pty = "0.8"

# CLI interface
clap = { version = "4.5", features = ["derive", "cargo"] }

# HTTP client (for auth)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
dirs = "5.0"
hostname = "0.4"
urlencoding = "2.1"
url = "2.5"
shell-words = "1.1"

# Platform-specific keychain
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.11"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Security_Credentials"] }

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "4.0", features = ["rt-tokio-crypto-rust"] }

# Pin transitive deps to versions compatible with Rust 1.85
[dependencies.home]
version = "=0.5.9"

[profile.release]
opt-level = "z"        # Optimize for size
lto = true             # Link-time optimization
codegen-units = 1      # Better optimization
panic = "abort"        # Smaller binary
strip = true           # Strip symbols

[profile.dev]
opt-level = 0
debug = true
